# fantasy_league_history

./: .gitignore  .pre-commit-config.yaml  README.md  SCHEMA_PROPOSAL.md  docker-compose.yml  pyproject.toml
.cursor/rules/: use-uv.mdc
.github/workflows/: pre-commit.yml  run_tests.yml
app/: config.py  database.py  main.py
app/models/: __init__.py  franchise.py  franchise_season.py  game.py  league.py  lineup.py  manager.py  matchup.py  player.py  roster.py  season.py  team.py
app/services/: espn_client.py  espn_importer.py
docker/: Dockerfile
scripts/: import_espn_league.py  seed_data.py  test_espn_api.py
tests/: api_test.py  conftest.py  models_test.py  queries_test.py
